# AI-Powered-Cybercrime-Digital-Forensics-Platform-with-Blockchain-Evidence-Verification

./: .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  ANCHORED_SUMMARY.md  CLAUDE.md  CONTEXT.md  README.md  SESSION.md  SYSTEM_ANALYSIS.md  build.py  health-check.py  install_vc.bat  install_vc.ps1  package-lock.json  package.json  requirements-dev.txt  requirements.txt  run_test.ps1  start-all.ps1  vm_checker.py
sandbox-agent/: README.md  pyproject.toml  run_runtime.bat  start_runtime.py
sandbox-agent/config/: default.json  default.yaml
sandbox-agent/packaging/pyinstaller/: agent.spec
sandbox-agent/src/forensics_sandbox_agent/: __init__.py  main.py
sandbox-agent/src/forensics_sandbox_agent/app/bootstrap/: app_factory.py  runtime.py
sandbox-agent/src/forensics_sandbox_agent/app/config/: execution_models.py  loader.py  models.py  monitoring_models.py  reporting_models.py
sandbox-agent/src/forensics_sandbox_agent/app/logging/: logger.py
sandbox-agent/src/forensics_sandbox_agent/app/services/: service_registry.py
sandbox-agent/src/forensics_sandbox_agent/domain/: simulator_mapping.py
sandbox-agent/src/forensics_sandbox_agent/domain/contracts/: execution.py
sandbox-agent/src/forensics_sandbox_agent/domain/entities/: forensic_session.py  simulator_descriptor.py
sandbox-agent/src/forensics_sandbox_agent/domain/value_objects/: app_state.py
sandbox-agent/src/forensics_sandbox_agent/infrastructure/: __main__.py  diagnostics.py  runtime_api.py  simulator_catalog.py
sandbox-agent/src/forensics_sandbox_agent/infrastructure/execution/: end_to_end_pipeline.py  logging_extensions.py  safety_enforcer.py  sandbox_execution_manager.py  session_orchestrator.py
sandbox-agent/src/forensics_sandbox_agent/infrastructure/monitoring/: base.py  behavior_detector.py  event_models.py  event_pipeline.py  file_monitor.py  forensic_timeline.py  network_monitor.py  (+5 more)
sandbox-agent/tests/unit/: test_config.py  test_config_loader.py  test_diagnostics.py  test_safety_enforcer.py  test_service_registry.py  test_vbox_communication.py
simulators/common/: pyproject.toml
simulators/common/src/forensics_simulator_common/: __init__.py
simulators/credential-stealer-simulator/: README.md  pyproject.toml
simulators/credential-stealer-simulator/config/: default.yaml
simulators/credential-stealer-simulator/packaging/pyinstaller/: simulator.spec
simulators/credential-stealer-simulator/src/credential_stealer_simulator/: __init__.py  runtime.py
simulators/spyware-simulator/: README.md  pyproject.toml
simulators/spyware-simulator/config/: default.yaml
simulators/spyware-simulator/packaging/pyinstaller/: simulator.spec
simulators/spyware-simulator/src/spyware_simulator/: __init__.py  runtime.py
(+392 files in other folders)
