[project]
name = "forensics-sandbox-agent"
version = "0.1.0"
description = "Phase 1 desktop sandbox agent foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7,<7.0",
  "psutil>=6.0,<7.0",
  "watchdog>=4.0,<5.0",
  "requests>=2.32,<3.0",
  "PyYAML>=6.0,<7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
