[project]
name = "forensics-sandbox-agent"
version = "0.1.0"
description = "Phase 1 desktop sandbox agent foundation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7,<7.0",
  "PyYAML>=6.0,<7.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-socketio[client]>=5.11,<6.0",
  "pydantic>=2.9,<3.0",
  "httpx>=0.27,<1.0",
  "websockets>=13.0,<14.0",
  "python-multipart>=0.0.10,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
